src/objects/SOQLQuery__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Soql_10__c</fullName>
        <label>Soql 10</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Soql_1__c</fullName>
        <label>Soql 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Soql_2__c</fullName>
        <label>Soql 2</label>
        <type>TextArea</type>
    </fields>
    <label>SOQLQuery</label>
</CustomObject>